Compilateur/y.output
Terminaux inutilisés dans la grammaire

   tEQ


État 62 conflits: 3 décalage/réduction
État 63 conflits: 3 décalage/réduction
État 64 conflits: 3 décalage/réduction
État 65 conflits: 3 décalage/réduction
État 67 conflits: 7 décalage/réduction
État 68 conflits: 7 décalage/réduction
État 72 conflits: 7 décalage/réduction


Grammaire

    0 $accept: File $end

    1 File: Main

    2 $@1: %empty

    3 Main: tMAIN $@1 tPO tPF tAO Body tAF

    4 Body: %empty
    5     | Definition Body
    6     | Affectation Body
    7     | Fonction Body
    8     | ifelse Body
    9     | DefinitionConst Body

   10 DefinitionConst: tCONST tINT tID tEGAL Expression tPV

   11 Definition: tINT tID DefinitionN tPV
   12           | tINT tID tEGAL Expression tPV

   13 DefinitionN: %empty

   14 $@2: %empty

   15 DefinitionN: tVR tID $@2 DefinitionN

   16 Affectation: tID tEGAL Expression tPV

   17 Expression: tID
   18           | tNB
   19           | tPO Expression tPF
   20           | Expression tPLUS Expression
   21           | Expression tMOINS Expression
   22           | Expression tDIV Expression
   23           | Expression tFOIS Expression
   24           | Expression tEGAL tEGAL Expression
   25           | Expression tSUP Expression
   26           | Expression tINF Expression

   27 Fonction: tPRINTF tPO tID tPF tPV

   28 $@3: %empty

   29 $@4: %empty

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF $@4 tELSE tAO Body tAF


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 3
tINT (259) 10 11 12
tEQ (260)
tPO (261) 3 19 27 30
tPF (262) 3 19 27 30
tAO (263) 3 30
tAF (264) 3 30
tPV (265) 10 11 12 16 27
tVR (266) 15
tPLUS (267) 20
tMOINS (268) 21
tDIV (269) 22
tFOIS (270) 23
tPRINTF (271) 27
tEGAL (272) 10 12 16 24
tCONST (273) 10
tELSE (274) 30
tSUP (275) 25
tINF (276) 26
tNB (277) 18
tIF (278) 30
tID (279) 10 11 12 15 16 17 27


Non-terminaux, suivis des règles où ils apparaissent

$accept (25)
    à gauche: 0
File (26)
    à gauche: 1, à droite: 0
Main (27)
    à gauche: 3, à droite: 1
$@1 (28)
    à gauche: 2, à droite: 3
Body (29)
    à gauche: 4 5 6 7 8 9, à droite: 3 5 6 7 8 9 30
DefinitionConst (30)
    à gauche: 10, à droite: 9
Definition (31)
    à gauche: 11 12, à droite: 5
DefinitionN (32)
    à gauche: 13 15, à droite: 11 15
$@2 (33)
    à gauche: 14, à droite: 15
Affectation (34)
    à gauche: 16, à droite: 6
Expression (35)
    à gauche: 17 18 19 20 21 22 23 24 25 26, à droite: 10 12 16 19
    20 21 22 23 24 25 26 30
Fonction (36)
    à gauche: 27, à droite: 7
ifelse (37)
    à gauche: 30, à droite: 8
$@3 (38)
    à gauche: 28, à droite: 30
$@4 (39)
    à gauche: 29, à droite: 30


État 0

    0 $accept: . File $end

    tMAIN  décalage et aller à l'état 1

    File  aller à l'état 2
    Main  aller à l'état 3


État 1

    3 Main: tMAIN . $@1 tPO tPF tAO Body tAF

    $défaut  réduction par utilisation de la règle 2 ($@1)

    $@1  aller à l'état 4


État 2

    0 $accept: File . $end

    $end  décalage et aller à l'état 5


État 3

    1 File: Main .

    $défaut  réduction par utilisation de la règle 1 (File)


État 4

    3 Main: tMAIN $@1 . tPO tPF tAO Body tAF

    tPO  décalage et aller à l'état 6


État 5

    0 $accept: File $end .

    $défaut  accepter


État 6

    3 Main: tMAIN $@1 tPO . tPF tAO Body tAF

    tPF  décalage et aller à l'état 7


État 7

    3 Main: tMAIN $@1 tPO tPF . tAO Body tAF

    tAO  décalage et aller à l'état 8


État 8

    3 Main: tMAIN $@1 tPO tPF tAO . Body tAF

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 14
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 9

   11 Definition: tINT . tID DefinitionN tPV
   12           | tINT . tID tEGAL Expression tPV

    tID  décalage et aller à l'état 20


État 10

   27 Fonction: tPRINTF . tPO tID tPF tPV

    tPO  décalage et aller à l'état 21


État 11

   10 DefinitionConst: tCONST . tINT tID tEGAL Expression tPV

    tINT  décalage et aller à l'état 22


État 12

   30 ifelse: tIF . tPO Expression tPF $@3 tAO Body tAF $@4 tELSE tAO Body tAF

    tPO  décalage et aller à l'état 23


État 13

   16 Affectation: tID . tEGAL Expression tPV

    tEGAL  décalage et aller à l'état 24


État 14

    3 Main: tMAIN $@1 tPO tPF tAO Body . tAF

    tAF  décalage et aller à l'état 25


État 15

    9 Body: DefinitionConst . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 26
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 16

    5 Body: Definition . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 27
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 17

    6 Body: Affectation . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 28
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 18

    7 Body: Fonction . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 29
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 19

    8 Body: ifelse . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 30
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 20

   11 Definition: tINT tID . DefinitionN tPV
   12           | tINT tID . tEGAL Expression tPV

    tVR    décalage et aller à l'état 31
    tEGAL  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 13 (DefinitionN)

    DefinitionN  aller à l'état 33


État 21

   27 Fonction: tPRINTF tPO . tID tPF tPV

    tID  décalage et aller à l'état 34


État 22

   10 DefinitionConst: tCONST tINT . tID tEGAL Expression tPV

    tID  décalage et aller à l'état 35


État 23

   30 ifelse: tIF tPO . Expression tPF $@3 tAO Body tAF $@4 tELSE tAO Body tAF

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 39


État 24

   16 Affectation: tID tEGAL . Expression tPV

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 40


État 25

    3 Main: tMAIN $@1 tPO tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 3 (Main)


État 26

    9 Body: DefinitionConst Body .

    $défaut  réduction par utilisation de la règle 9 (Body)


État 27

    5 Body: Definition Body .

    $défaut  réduction par utilisation de la règle 5 (Body)


État 28

    6 Body: Affectation Body .

    $défaut  réduction par utilisation de la règle 6 (Body)


État 29

    7 Body: Fonction Body .

    $défaut  réduction par utilisation de la règle 7 (Body)


État 30

    8 Body: ifelse Body .

    $défaut  réduction par utilisation de la règle 8 (Body)


État 31

   15 DefinitionN: tVR . tID $@2 DefinitionN

    tID  décalage et aller à l'état 41


État 32

   12 Definition: tINT tID tEGAL . Expression tPV

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 42


État 33

   11 Definition: tINT tID DefinitionN . tPV

    tPV  décalage et aller à l'état 43


État 34

   27 Fonction: tPRINTF tPO tID . tPF tPV

    tPF  décalage et aller à l'état 44


État 35

   10 DefinitionConst: tCONST tINT tID . tEGAL Expression tPV

    tEGAL  décalage et aller à l'état 45


État 36

   19 Expression: tPO . Expression tPF

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 46


État 37

   18 Expression: tNB .

    $défaut  réduction par utilisation de la règle 18 (Expression)


État 38

   17 Expression: tID .

    $défaut  réduction par utilisation de la règle 17 (Expression)


État 39

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression
   30 ifelse: tIF tPO Expression . tPF $@3 tAO Body tAF $@4 tELSE tAO Body tAF

    tPF     décalage et aller à l'état 47
    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54


État 40

   16 Affectation: tID tEGAL Expression . tPV
   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tPV     décalage et aller à l'état 55
    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54


État 41

   15 DefinitionN: tVR tID . $@2 DefinitionN

    $défaut  réduction par utilisation de la règle 14 ($@2)

    $@2  aller à l'état 56


État 42

   12 Definition: tINT tID tEGAL Expression . tPV
   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tPV     décalage et aller à l'état 57
    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54


État 43

   11 Definition: tINT tID DefinitionN tPV .

    $défaut  réduction par utilisation de la règle 11 (Definition)


État 44

   27 Fonction: tPRINTF tPO tID tPF . tPV

    tPV  décalage et aller à l'état 58


État 45

   10 DefinitionConst: tCONST tINT tID tEGAL . Expression tPV

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 59


État 46

   19 Expression: tPO Expression . tPF
   20           | Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tPF     décalage et aller à l'état 60
    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54


État 47

   30 ifelse: tIF tPO Expression tPF . $@3 tAO Body tAF $@4 tELSE tAO Body tAF

    $défaut  réduction par utilisation de la règle 28 ($@3)

    $@3  aller à l'état 61


État 48

   20 Expression: Expression tPLUS . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 62


État 49

   21 Expression: Expression tMOINS . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 63


État 50

   22 Expression: Expression tDIV . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 64


État 51

   23 Expression: Expression tFOIS . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 65


État 52

   24 Expression: Expression tEGAL . tEGAL Expression

    tEGAL  décalage et aller à l'état 66


État 53

   25 Expression: Expression tSUP . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 67


État 54

   26 Expression: Expression tINF . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 68


État 55

   16 Affectation: tID tEGAL Expression tPV .

    $défaut  réduction par utilisation de la règle 16 (Affectation)


État 56

   15 DefinitionN: tVR tID $@2 . DefinitionN

    tVR  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 13 (DefinitionN)

    DefinitionN  aller à l'état 69


État 57

   12 Definition: tINT tID tEGAL Expression tPV .

    $défaut  réduction par utilisation de la règle 12 (Definition)


État 58

   27 Fonction: tPRINTF tPO tID tPF tPV .

    $défaut  réduction par utilisation de la règle 27 (Fonction)


État 59

   10 DefinitionConst: tCONST tINT tID tEGAL Expression . tPV
   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tPV     décalage et aller à l'état 70
    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54


État 60

   19 Expression: tPO Expression tPF .

    $défaut  réduction par utilisation de la règle 19 (Expression)


État 61

   30 ifelse: tIF tPO Expression tPF $@3 . tAO Body tAF $@4 tELSE tAO Body tAF

    tAO  décalage et aller à l'état 71


État 62

   20 Expression: Expression . tPLUS Expression
   20           | Expression tPLUS Expression .
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tDIV   décalage et aller à l'état 50
    tFOIS  décalage et aller à l'état 51
    tEGAL  décalage et aller à l'état 52
    tSUP   décalage et aller à l'état 53
    tINF   décalage et aller à l'état 54

    tEGAL     [réduction par utilisation de la règle 20 (Expression)]
    tSUP      [réduction par utilisation de la règle 20 (Expression)]
    tINF      [réduction par utilisation de la règle 20 (Expression)]
    $défaut  réduction par utilisation de la règle 20 (Expression)


État 63

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   21           | Expression tMOINS Expression .
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tDIV   décalage et aller à l'état 50
    tFOIS  décalage et aller à l'état 51
    tEGAL  décalage et aller à l'état 52
    tSUP   décalage et aller à l'état 53
    tINF   décalage et aller à l'état 54

    tEGAL     [réduction par utilisation de la règle 21 (Expression)]
    tSUP      [réduction par utilisation de la règle 21 (Expression)]
    tINF      [réduction par utilisation de la règle 21 (Expression)]
    $défaut  réduction par utilisation de la règle 21 (Expression)


État 64

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   22           | Expression tDIV Expression .
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tEGAL  décalage et aller à l'état 52
    tSUP   décalage et aller à l'état 53
    tINF   décalage et aller à l'état 54

    tEGAL     [réduction par utilisation de la règle 22 (Expression)]
    tSUP      [réduction par utilisation de la règle 22 (Expression)]
    tINF      [réduction par utilisation de la règle 22 (Expression)]
    $défaut  réduction par utilisation de la règle 22 (Expression)


État 65

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   23           | Expression tFOIS Expression .
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tEGAL  décalage et aller à l'état 52
    tSUP   décalage et aller à l'état 53
    tINF   décalage et aller à l'état 54

    tEGAL     [réduction par utilisation de la règle 23 (Expression)]
    tSUP      [réduction par utilisation de la règle 23 (Expression)]
    tINF      [réduction par utilisation de la règle 23 (Expression)]
    $défaut  réduction par utilisation de la règle 23 (Expression)


État 66

   24 Expression: Expression tEGAL tEGAL . Expression

    tPO  décalage et aller à l'état 36
    tNB  décalage et aller à l'état 37
    tID  décalage et aller à l'état 38

    Expression  aller à l'état 72


État 67

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   25           | Expression tSUP Expression .
   26           | Expression . tINF Expression

    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54

    tPLUS     [réduction par utilisation de la règle 25 (Expression)]
    tMOINS    [réduction par utilisation de la règle 25 (Expression)]
    tDIV      [réduction par utilisation de la règle 25 (Expression)]
    tFOIS     [réduction par utilisation de la règle 25 (Expression)]
    tEGAL     [réduction par utilisation de la règle 25 (Expression)]
    tSUP      [réduction par utilisation de la règle 25 (Expression)]
    tINF      [réduction par utilisation de la règle 25 (Expression)]
    $défaut  réduction par utilisation de la règle 25 (Expression)


État 68

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression
   26           | Expression tINF Expression .

    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54

    tPLUS     [réduction par utilisation de la règle 26 (Expression)]
    tMOINS    [réduction par utilisation de la règle 26 (Expression)]
    tDIV      [réduction par utilisation de la règle 26 (Expression)]
    tFOIS     [réduction par utilisation de la règle 26 (Expression)]
    tEGAL     [réduction par utilisation de la règle 26 (Expression)]
    tSUP      [réduction par utilisation de la règle 26 (Expression)]
    tINF      [réduction par utilisation de la règle 26 (Expression)]
    $défaut  réduction par utilisation de la règle 26 (Expression)


État 69

   15 DefinitionN: tVR tID $@2 DefinitionN .

    $défaut  réduction par utilisation de la règle 15 (DefinitionN)


État 70

   10 DefinitionConst: tCONST tINT tID tEGAL Expression tPV .

    $défaut  réduction par utilisation de la règle 10 (DefinitionConst)


État 71

   30 ifelse: tIF tPO Expression tPF $@3 tAO . Body tAF $@4 tELSE tAO Body tAF

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 73
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 72

   20 Expression: Expression . tPLUS Expression
   21           | Expression . tMOINS Expression
   22           | Expression . tDIV Expression
   23           | Expression . tFOIS Expression
   24           | Expression . tEGAL tEGAL Expression
   24           | Expression tEGAL tEGAL Expression .
   25           | Expression . tSUP Expression
   26           | Expression . tINF Expression

    tPLUS   décalage et aller à l'état 48
    tMOINS  décalage et aller à l'état 49
    tDIV    décalage et aller à l'état 50
    tFOIS   décalage et aller à l'état 51
    tEGAL   décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tINF    décalage et aller à l'état 54

    tPLUS     [réduction par utilisation de la règle 24 (Expression)]
    tMOINS    [réduction par utilisation de la règle 24 (Expression)]
    tDIV      [réduction par utilisation de la règle 24 (Expression)]
    tFOIS     [réduction par utilisation de la règle 24 (Expression)]
    tEGAL     [réduction par utilisation de la règle 24 (Expression)]
    tSUP      [réduction par utilisation de la règle 24 (Expression)]
    tINF      [réduction par utilisation de la règle 24 (Expression)]
    $défaut  réduction par utilisation de la règle 24 (Expression)


État 73

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body . tAF $@4 tELSE tAO Body tAF

    tAF  décalage et aller à l'état 74


État 74

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF . $@4 tELSE tAO Body tAF

    $défaut  réduction par utilisation de la règle 29 ($@4)

    $@4  aller à l'état 75


État 75

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF $@4 . tELSE tAO Body tAF

    tELSE  décalage et aller à l'état 76


État 76

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF $@4 tELSE . tAO Body tAF

    tAO  décalage et aller à l'état 77


État 77

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF $@4 tELSE tAO . Body tAF

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tCONST   décalage et aller à l'état 11
    tIF      décalage et aller à l'état 12
    tID      décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body             aller à l'état 78
    DefinitionConst  aller à l'état 15
    Definition       aller à l'état 16
    Affectation      aller à l'état 17
    Fonction         aller à l'état 18
    ifelse           aller à l'état 19


État 78

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF $@4 tELSE tAO Body . tAF

    tAF  décalage et aller à l'état 79


État 79

   30 ifelse: tIF tPO Expression tPF $@3 tAO Body tAF $@4 tELSE tAO Body tAF .

    $défaut  réduction par utilisation de la règle 30 (ifelse)
